[fix]:Section3 card problem on mobile 8th

--- a/css/style.css
+++ b/css/style.css
@@ -213,16 +213,17 @@ h2 {
 
 .room-item {
     width: 20%; /* 三个房间卡片各占30%宽度 */
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* 卡片阴影 */
-    border-radius: 10px;
     background-color: white; /* 卡片背景色 */
-    cursor: pointer; /* 鼠标悬停时显示为可点击 */
-    transition: transform 0.3s ease-in-out;
-    position: relative; /* 为点击链接定位 */
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* 卡片阴影 */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    cursor: pointer; /* 鼠标悬停时显示为可点击 */
+    transition: transform 0.3s ease-in-out;
+    position: relative; /* 为点击链接定位 */
 }
 
 .room-item img {
